--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> Python, AWS, Terraform</p>
+<p> CI/ CD, Scrum, Git, Linux</p>
